--- a/rcnh.html
+++ b/rcnh.html
@@ -2,7 +2,7 @@
 ><span id="c">$</span> cd ЯСИН/About_Me
 <span id="a">ЯСИН@Pardus</span>:<span id="b">~</span
 ><span id="c">$</span> cat ЯСИН.txt<br /><br />
-"<span id="k">Hey oradaki, seni burada görmek güzel.</span>" Ben Neo.
+"<span id="k">Hey oradaki, seni burada görmek güzel.</span>" Ben ЯСИН.
 <p>Hoş geldin!</p>
 <p>
   Projelerimi görmek için, Github hesabıma bakabilirsin.
